# neural-network-scratch

./: .gitignore  Makefile  README.md  pyproject.toml
neural_network_scratch/: __init__.py  activation.py  gzip.py  network.py  sample.py
notebooks/: notebook.ipynb
tests/: test_activation.py  test_network.py
