[tool.poetry]
name = "neural-network-scratch"
version = "0.1.0"
description = ""
authors = ["Peter Hull <petermnhull@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.2"
numpy = "^1.26.4"
ruff = "^0.2.1"
structlog = "^24.1.0"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length=100
extend-include = ["*.ipynb"]
