[tool.poetry]
name = "neural-network-scratch"
version = "0.1.0"
description = ""
authors = ["Peter Hull <petermnhull@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
structlog = "^24.1.0"
scikit-learn = "^1.4.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"
matplotlib = "^3.8.2"
ipykernel = "^6.29.2"
pytest = "^8.0.0"
importlib = "^1.0.4"
coverage = "^7.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length=100
extend-include = ["*.ipynb"]
